syntax = "proto3";

package sfc_request;

option csharp_namespace = "SFC.Request.Contracts.Messages.Request.Team.Player.Get";

message GetTeamPlayerRequestRequest
{
    int64 id = 1;
    int64 team_id = 2;
    int64 player_id = 3;
}