syntax = "proto3";

package sfc_request;

import "Messages/Request/Team/Player/Get/get_team_player_request_request.proto";
import "Messages/Request/Team/Player/Get/get_team_player_request_response.proto";
import "Messages/Request/Team/Player/Find/get_team_player_requests_request.proto";
import "Messages/Request/Team/Player/Find/get_team_player_requests_response.proto";

option csharp_namespace = "SFC.Request.Contracts.Services";

service TeamPlayerRequestService {
    rpc GetTeamPlayerRequest(GetTeamPlayerRequestRequest) returns (GetTeamPlayerRequestResponse);
    rpc GetTeamPlayerRequests(GetTeamPlayerRequestsRequest) returns (GetTeamPlayerRequestsResponse);
}